fixed alignment of Hamburger in navbar to be center

--- a/NavBar.css
+++ b/NavBar.css
@@ -82,7 +82,9 @@ body {
     }
 
     .hamburger {
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
